--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
       </p>
       <!--<p><%- post.post %></p>-->
     <% }) %>
+    <%- include paging %>
     <%- include footer %>
   </body>
 </html>
