--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
       <p class="info">
         作者：<a href="/u/<%= post.name %>"><%= post.name %></a>|日期：<%= post.time.minute %>
       </p>
-      <!--<p><%- post.post %></p>-->
+      <p><%- post.post %></p>
     <% }) %>
     <%- include paging %>
     <%- include footer %>
