--- a/views/post.ejs
+++ b/views/post.ejs
@@ -2,6 +2,8 @@
 <form action="" method="post">
     标题： <br/>
     <input type="text" name="title"/><br/>
+    标签：<br />
+    <input type="text" name="tag1" /><input type="text" name="tag2" /><input type="text" name="tag3" /><br />
     <!--发表时间：<input type="datetime"/>-->
     正文：<br/>
     <textarea name="post" id="post" cols="100" rows="30"></textarea><br/>
