added bootstrap and change some css

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,5 @@
 </article>
+<script src="http://apps.bdimg.com/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
 </html>
