--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,8 @@
 *{padding:0;margin:0;}
 body{width:600px;margin:2em auto;padding:0 2em;font-size:14px;font-family:"Microsoft YaHei";}
 p{line-height:24px;margin:1em 0;}
-header{padding:.5em 0;border-bottom:1px solid #cccccc;}
+header{padding:.5em 0;border-bottom:1px solid #cccccc;position: relative;}
+header h1{width: 200px;}
 nav{float:left;font-family:"Microsoft YaHei";font-size:1.1em;text-transform:uppercase;margin-left:-12em;width:9em;text-align:left;}
 nav a{display:block;text-decoration:none;padding:.7em 1em;color:#000000;}
 nav a:hover{background-color:#ccc;color:#f9f9f9;-webkit-transition:color .2s linear;}
@@ -24,7 +25,9 @@ article a:hover{color:#333333;text-decoration:underline;}
 .prepage a:hover,.nextpage a:hover{text-decoration:none;background-color:#ff0000;color:#f9f9f9;-webkit-transition:color .2s linear;}
 
 .tip{
-  float: right;
+  position: absolute;
+  right: 0;
+  top: 3em;
 }
 .userName{
   font-weight: 700;
