--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Blog</title>
-    <link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.3.4/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css"/>
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
