--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -1,13 +1,18 @@
 <br />
 <% if(post.comments){ %>
+<ul class="media-list">
     <% post.comments.forEach(function (comment, index) { %>
-    <div style="padding-left:4em">
-        <p>
-            <img src="<%= comment.head %>" class="l_head" />
-            <a href="<%= comment.website %>"><%= comment.name %></a>
-            <span class="info"> 回复于 <%= comment.time %></span>
-        </p>
-        <p><%- comment.content %></p>
+    <li class="media">
+        <div class="media-left">
+            <img src="<%= comment.head %>" />
+        </div>
+        <div class="media-body">
+            <h4 class="media-heading">
+                <a href="<%= comment.website %>"><%= comment.name %></a>
+                <span class="info"> 回复于 <%= comment.time %></span>
+            </h4>
+            <p><%- comment.content %></p>
+        </div>
     </div>
     <% }) %>
 <% } %>
